# ecstasy

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO.md  appveyor.yml
.github/workflows/: build-ubuntu.yml  build-windows.yml
src/: collector.rs  error.rs  item.rs  logger.rs  main.rs  manifest.rs  params.rs  stats.rs  utility.rs
src/collectors/: bleachbooru.rs  danbooru.rs  e621.rs  e926.rs  gelbooru.rs  hypnohub.rs  konachan.rs  mod.rs  realbooru.rs  rule34.rs  safebooru.rs  xbooru.rs  yandere.rs
