[package]
edition = "2021"
name = "ecstasy"
version = "0.3.0"
authors = ["AXAz0r <thealeksaradovic@gmail.com>", "Autist69420 <enp7s1@tutanota.com>"]
keywords = ["image", "scrapper", "gallery"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Autist69420/ecstasy"
description = "A fork of the modular, expandable, gallery collector named Kyanite"
exclude = [
    ".obsidian/"
]


[profile.release]
opt-level = 3
lto = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "3.1.18"
fern = { version = "0.6", features = ["colored"] }
flate2 = "1.0"
md5 = "0.7"
log = "0.4"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.5.1"
slug = "0.1"
